--- a/TS-Lyrical-GraphQL/server/package.json
+++ b/TS-Lyrical-GraphQL/server/package.json
@@ -12,12 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
     "graphql-http": "^1.22.0",
     "graphql-playground-middleware-express": "^1.7.23",
     "json-server": "^0.17.3",
+    "lodash": "^4.17.21",
+    "mongoose": "^7.6.3",
     "nodemon": "^3.0.1"
   }
 }
