--- a/TS-Lyrical-GraphQL/server/package.json
+++ b/TS-Lyrical-GraphQL/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "graphql": "^15.8.0",
     "graphql-http": "^1.22.0",
