--- a/TS-Lyrical-GraphQL/server/package.json
+++ b/TS-Lyrical-GraphQL/server/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^15.8.0",
     "graphql-http": "^1.22.0",
